# nemu-allegro-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVICE_FLOW.md  LIVE_TESTING.md  TOOLS.md
scripts/: bootstrap_auth.py  revoke_tokens.py  smoke_test.py
src/allegro_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
src/allegro_mcp/auth/: __init__.py  device_flow.py  refresh.py  token_store.py
src/allegro_mcp/models/: __init__.py  account.py  bidding.py  category.py  compare.py  deep_search.py  disputes.py  handoff.py  intel.py  messaging.py  offer.py  pickup.py  product.py  purchase.py  ratings.py  search.py  seller.py  watching.py
src/allegro_mcp/persistence/: __init__.py  price_history.py  schema.sql
src/allegro_mcp/tools/: __init__.py  _parsers.py  bidding.py  category.py  compare.py  deep_search.py  disputes.py  intel.py  messaging.py  offer.py  product.py  purchase_handoff.py  purchases.py  ratings.py  search.py  seller.py  watching.py
src/allegro_mcp/utils/: polish_text.py  rate_limit.py
tests/: conftest.py
tests/contract/: _cassette.py  test_contract.py
tests/contract/cassettes/: get_offer.json  list_categories.json  me.json  search_offers.json
tests/integration/: test_live_sandbox.py
tests/unit/: test_bearer_auth.py  test_bidding.py  test_buyer_tools.py  test_client.py  test_compare.py  test_config.py  test_deep_search.py  test_device_flow.py  test_edge_cases.py  test_handoff.py  test_intel.py  test_misc_tools.py  test_parsers.py  test_persistence.py  test_polish_text.py  test_rate_limit.py  test_refresh.py  test_search_tool.py  test_server_loader.py  test_server_snapshot.py  test_token_store.py
