[project]
name = "allegro-mcp"
version = "0.1.0"
description = "Buy-side Allegro marketplace MCP server for LLM agents"
readme = "README.md"
license = { text = "PolyForm-Noncommercial-1.0.0" }
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "allegro-mcp contributors" },
]
keywords = ["allegro", "mcp", "model-context-protocol", "ecommerce", "marketplace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=2.5",
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-aiofiles",
]

[project.scripts]
allegro-mcp = "allegro_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/borystam/allegro-agent-mcp"
Issues = "https://github.com/borystam/allegro-agent-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/allegro_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/allegro_mcp",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = [
    "S101",  # use of assert in tests is fine
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
"scripts/**" = ["S101"]
"src/allegro_mcp/auth/device_flow.py" = ["N818"]  # DeviceCodeExpired is named per the spec
"src/allegro_mcp/tools/bidding.py" = ["N818"]  # ConfirmationRequired is named per the spec

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
files = ["src/allegro_mcp"]

[[tool.mypy.overrides]]
module = ["fastmcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: live sandbox tests (require credentials)",
    "contract: cassette-replayed tests",
]

[tool.coverage.run]
source = ["src/allegro_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
